--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 /**
-Theme name: Sacha - Lab5
+Theme name: Sacha - Lab6 - 24-02-22
+
 
 
 */
@@ -30,6 +31,7 @@ COMPOSANTS
 @import "composants/header";
 @import "composants/navigation";
 @import "composants/404";
+@import "composants/recherche";
 
 /* ---------------------------------------------------------
 LAYOUT
