commit avant mixin

--- a/sass/composants/_footer.scss
+++ b/sass/composants/_footer.scss
@@ -21,7 +21,7 @@
 
                 padding: 3px;
                 svg{ //.site__footer__menu__ul .menu-item a svg
-                    color: aqua;
+                    color: darkblue;
                 }
             }
 
