--- a/sass/animation/_entete.scss
+++ b/sass/animation/_entete.scss
@@ -2,6 +2,8 @@
 
     display:flex;
 
+  
+
     width: 90%;
 
     border: solid black 1px;
@@ -23,39 +25,51 @@
 
         color:white;
 
-        background-color: $color__colorbackground-barre;
+        background-color: $color__colorbackground-footer;
 
         transform: translateX(0) translateY(0);
-        animation: anim_bloc 1s 1s forwards;
+        animation: anim_bloc 1s 1s backwards;
 
     }
 
-    // &__bloc:nth-of-type(1){
+    &__bloc:nth-of-type(1){
 
-    //     transform: translateY(-100vh);
-    //     transition: transform .5s 3s;
+        animation-delay: .25s;
+    
 
-    // }
+    }
 
-    // &__bloc:nth-of-type(2){
-    //  transform: translateY(100vh);
-    // }
+    &__bloc:nth-of-type(2){
 
-
-    // &__bloc:nth-of-type(3){
-    //     transform: translateX(100vw);
-    // }
+        animation-delay: .5s;
+    
+    }
 
 
-    // &__bloc:nth-of-type(4){
-    //   transform: translateY(-100vw);
-    // }
+    &__bloc:nth-of-type(3){
+        animation-delay:.75s;
+    }
 
 
-    // &__bloc:nth-of-type(5){
-    //    transform: translate(100vh, 100vw);
+    &__bloc:nth-of-type(4){
+        animation-delay: 1s;
+    }
 
-    // }
+
+    &__bloc:nth-of-type(5){
+       animation-delay: 1.25s;
+
+    }
+
+    &__bloc:nth-of-type(6){
+        animation-delay: 1.5s;
+ 
+     }
+
+     &__bloc:nth-of-type(7){
+        animation-delay: 1.75s;
+ 
+     }
 
     @keyframes anim_bloc {
 
@@ -93,5 +107,19 @@
 
     animation: anim_recherche 1s ease-in-out backwards;
     
+}
+
+
+.animation {
+
+    align-items: center;
+    justify-content: space-around;
+
+    &__bloc{
+
+        font-size: 3rem;
+        font-weight: bold;
+        color: black;
+    }
 }
 
