--- a/style.css
+++ b/style.css
@@ -506,7 +506,7 @@ COMPOSANTS
 }
 
 .site__footer__menu__ul .menu-item a svg {
-  color: aqua;
+  color: darkblue;
 }
 
 .site__footer > section {
@@ -649,6 +649,21 @@ COMPOSANTS
   background-color: #66fcf1;
 }
 
+#menu-simple {
+  justify-content: space-around;
+}
+
+.menu-principal-container {
+  height: 100%;
+}
+
+#menu-principal {
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+}
+
 .erreur__404 h1 {
   font-size: 5rem;
   font-family: Arial, Helvetica, sans-serif;
@@ -712,6 +727,16 @@ LAYOUT
   }
 }
 
+.principal {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+}
+
+.principal h1 {
+  align-self: center;
+}
+
 /* ---------------------------------------------------------
 ANIMATION
 --------------------------------------------------------- */
@@ -729,9 +754,37 @@ ANIMATION
   align-items: center;
   border-radius: 50%;
   color: white;
-  background-color: #0b0c10;
+  background-color: #66fcf1;
   transform: translateX(0) translateY(0);
-  animation: anim_bloc 1s 1s forwards;
+  animation: anim_bloc 1s 1s backwards;
+}
+
+.animation__bloc:nth-of-type(1) {
+  animation-delay: .25s;
+}
+
+.animation__bloc:nth-of-type(2) {
+  animation-delay: .5s;
+}
+
+.animation__bloc:nth-of-type(3) {
+  animation-delay: .75s;
+}
+
+.animation__bloc:nth-of-type(4) {
+  animation-delay: 1s;
+}
+
+.animation__bloc:nth-of-type(5) {
+  animation-delay: 1.25s;
+}
+
+.animation__bloc:nth-of-type(6) {
+  animation-delay: 1.5s;
+}
+
+.animation__bloc:nth-of-type(7) {
+  animation-delay: 1.75s;
 }
 
 @keyframes anim_bloc {
@@ -754,5 +807,16 @@ ANIMATION
 
 .util {
   animation: anim_recherche 1s ease-in-out backwards;
+}
+
+.animation {
+  align-items: center;
+  justify-content: space-around;
+}
+
+.animation__bloc {
+  font-size: 3rem;
+  font-weight: bold;
+  color: black;
 }
 /*# sourceMappingURL=style.css.map */
