ajout des icones du menu dans le sidebar

--- a/sass/composants/_navigation.scss
+++ b/sass/composants/_navigation.scss
@@ -86,3 +86,15 @@
     justify-content: space-around;
 
 }
+
+.menu {
+
+    li {
+
+        a {
+            display: flex;
+            align-items: center;
+        }
+    }
+    
+}
