--- a/style.css
+++ b/style.css
@@ -664,6 +664,11 @@ COMPOSANTS
   justify-content: space-around;
 }
 
+.menu li a {
+  display: flex;
+  align-items: center;
+}
+
 .erreur__404 h1 {
   font-size: 5rem;
   font-family: Arial, Helvetica, sans-serif;
