--- a/sass/composants/_footer.scss
+++ b/sass/composants/_footer.scss
@@ -39,3 +39,34 @@
     justify-content: center;
     align-items: center;
 }
+
+
+.site__footer {
+
+display: flex;
+flex-direction: column;
+
+&__colonne {
+    display:flex;
+    // flex-direction: column;
+    section {
+
+        display: flex;
+        flex-direction: column;
+
+        border: solid black 1px;
+        flex: 0 0 30%;
+
+    }
+
+}
+
+&__ligne {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+
+}
+
+}
