--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /**
-Theme name: Sacha - Lab6 - 24-02-22
+Theme name: Sacha - TP
+
 
 
 
@@ -513,6 +514,28 @@ COMPOSANTS
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
+  align-items: center;
+}
+
+.site__footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.site__footer__colonne {
+  display: flex;
+}
+
+.site__footer__colonne section {
+  display: flex;
+  flex-direction: column;
+  border: solid black 1px;
+  flex: 0 0 30%;
+}
+
+.site__footer__ligne {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
