--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -14,9 +14,33 @@
 		"footer";
 }
 
+
+.home::after{
+
+    content: "";
+
+    position:absolute;
+    width:100%;
+    height:100%;
+
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    background-color: rgba(blue, .5);
+
+    clip-path: polygon(79% 0, 100% 0, 100% 100%, 49% 100%);
+
+    z-index:-1;
+
+   
+
+}
+
 .site__header{
     grid-area: header;
-    background-color: $color__colorbackground-header;
+    background-color:rgba( $color__colorbackground-header, 0.5);
 }
 
 .site__footer{
@@ -26,7 +50,12 @@
 
 .site__main{
     grid-area: main;
-    background-color: $color__colorbackground-main;
+    background-color: rgba($color__colorbackground-main, 0.5);
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .site__barre{
@@ -62,4 +91,18 @@
     h1 {
         align-self: center;
     }
+}
+
+
+
+.article__contenu  {
+
+    display: flex;
+
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: space-around;
+
+    text-align: center;
+
 }
