--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 /**
-Theme name: Sacha - TP
+Theme name: Sacha - TP1 - 03-15
+Author: Sacha ACL
+
+
 
 
 
@@ -729,9 +732,23 @@ LAYOUT
   grid-template-areas: "sidebar" "header " " main" "footer";
 }
 
+.home::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 255, 0.5);
+  clip-path: polygon(79% 0, 100% 0, 100% 100%, 49% 100%);
+  z-index: -1;
+}
+
 .site__header {
   grid-area: header;
-  background-color: #45A29E;
+  background-color: rgba(69, 162, 158, 0.5);
 }
 
 .site__footer {
@@ -741,7 +758,11 @@ LAYOUT
 
 .site__main {
   grid-area: main;
-  background-color: #1f2833;
+  background-color: rgba(31, 40, 51, 0.5);
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .site__barre {
@@ -763,6 +784,14 @@ LAYOUT
 
 .principal h1 {
   align-self: center;
+}
+
+.article__contenu {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: space-around;
+  text-align: center;
 }
 
 /* ---------------------------------------------------------
