--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -106,3 +106,15 @@
     text-align: center;
 
 }
+
+.menu-lien_externe-container .menu {
+
+
+display:flex;
+
+flex-flow: column nowrap;
+
+justify-content: space-between;
+align-items: center;
+
+}
