--- a/style.css
+++ b/style.css
@@ -794,6 +794,13 @@ LAYOUT
   text-align: center;
 }
 
+.menu-lien_externe-container .menu {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /* ---------------------------------------------------------
 ANIMATION
 --------------------------------------------------------- */
@@ -863,7 +870,7 @@ ANIMATION
 }
 
 .util {
-  animation: anim_recherche 1s ease-in-out backwards;
+  animation: anim_recherche 1s 2.5s ease-in-out backwards;
 }
 
 .animation {
@@ -875,6 +882,90 @@ ANIMATION
   font-size: 3rem;
   font-weight: bold;
   color: black;
+}
+
+@keyframes animTitres {
+  0% {
+    transform: translateX(100vw);
+  }
+  95% {
+    transform: translateX(-5vw);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.site__header__titre h1 {
+  animation: animTitres 1s 0.5s backwards;
+}
+
+.site__header__titre h2 {
+  animation: animTitres 1s 1.5s backwards;
+}
+
+.menu-principal-container .menu-item:nth-of-type(1) {
+  animation-delay: 0.2s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(2) {
+  animation-delay: 0.4s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(3) {
+  animation-delay: 0.6s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(4) {
+  animation-delay: 0.8s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(5) {
+  animation-delay: 1s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(6) {
+  animation-delay: 1.2s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(7) {
+  animation-delay: 1.4s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(8) {
+  animation-delay: 1.6s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(9) {
+  animation-delay: 1.8s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(10) {
+  animation-delay: 2s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(11) {
+  animation-delay: 2.2s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(12) {
+  animation-delay: 2.4s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(13) {
+  animation-delay: 2.6s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(14) {
+  animation-delay: 2.8s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(15) {
+  animation-delay: 3s;
+}
+
+.menu-principal-container .menu-item:nth-of-type(16) {
+  animation-delay: 3.2s;
 }
 
 .menu-principal-container .menu-item {
@@ -890,6 +981,114 @@ ANIMATION
   }
   100% {
     transform: translateX(0);
+  }
+}
+
+.cours .cours__carte:nth-of-type(1) {
+  animation-delay: 0.2s;
+}
+
+.cours .cours__carte:nth-of-type(2) {
+  animation-delay: 0.4s;
+}
+
+.cours .cours__carte:nth-of-type(3) {
+  animation-delay: 0.6s;
+}
+
+.cours .cours__carte:nth-of-type(4) {
+  animation-delay: 0.8s;
+}
+
+.cours .cours__carte:nth-of-type(5) {
+  animation-delay: 1s;
+}
+
+.cours .cours__carte:nth-of-type(6) {
+  animation-delay: 1.2s;
+}
+
+.cours .cours__carte:nth-of-type(7) {
+  animation-delay: 1.4s;
+}
+
+.cours .cours__carte:nth-of-type(8) {
+  animation-delay: 1.6s;
+}
+
+.cours .cours__carte:nth-of-type(9) {
+  animation-delay: 1.8s;
+}
+
+.cours .cours__carte:nth-of-type(10) {
+  animation-delay: 2s;
+}
+
+.cours .cours__carte:nth-of-type(11) {
+  animation-delay: 2.2s;
+}
+
+.cours .cours__carte:nth-of-type(12) {
+  animation-delay: 2.4s;
+}
+
+.cours .cours__carte:nth-of-type(13) {
+  animation-delay: 2.6s;
+}
+
+.cours .cours__carte:nth-of-type(14) {
+  animation-delay: 2.8s;
+}
+
+.cours .cours__carte:nth-of-type(15) {
+  animation-delay: 3s;
+}
+
+.cours .cours__carte:nth-of-type(16) {
+  animation-delay: 3.2s;
+}
+
+.cours .cours__carte:nth-of-type(17) {
+  animation-delay: 3.4s;
+}
+
+.cours .cours__carte:nth-of-type(18) {
+  animation-delay: 3.6s;
+}
+
+.cours .cours__carte:nth-of-type(19) {
+  animation-delay: 3.8s;
+}
+
+.cours .cours__carte:nth-of-type(20) {
+  animation-delay: 4s;
+}
+
+.cours .cours__carte:nth-of-type(21) {
+  animation-delay: 4.2s;
+}
+
+.cours .cours__carte:nth-of-type(22) {
+  animation-delay: 4.4s;
+}
+
+.cours .cours__carte:nth-of-type(23) {
+  animation-delay: 4.6s;
+}
+
+.cours .cours__carte {
+  animation: animCarte 1s 0.5s backwards;
+}
+
+@keyframes animCarte {
+  0% {
+    transform: scale(0);
+  }
+  95% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 /*# sourceMappingURL=style.css.map */
