les droits d'auteurs

--- a/sass/mixins/_mixin.scss
+++ b/sass/mixins/_mixin.scss
@@ -17,3 +17,22 @@
     }
 
 }
+
+
+
+@mixin lesFlex($flexColonne, $flexLigne) {
+
+
+     flex-flow: $flexLigne;
+
+     &__menu {
+         flex-flow: $flexColonne;
+     }
+
+}
+
+
+
+@mixin breakpoints($largeur__media-tablette, $largeur__media-desktop) {
+
+}
