--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,11 +1,13 @@
 /**
-Theme name: Sacha - TP1 - 03-15
-Author: Sacha ACL
-
-
-
-
-
+Theme name: 2022-4w4 TP1 Sacha
+Author: Sacha-Alexendre Collard-Legault
+Author URI: https://github.com/drydrybanks
+Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
+des étapes de développement se retrouvera sur gitHub à l'adresse: https://github.com/eddytuto/2022-4w4
+Version: 1.0.0
+License: GNU General Public License v2 or later
+License URI: LICENSE
+Text Domain: cidw-4w4
 
 */
 
