--- a/sass/variables/_couleurs.scss
+++ b/sass/variables/_couleurs.scss
@@ -1,3 +1,5 @@
+// Les variables de couleurs
+
 $color__background-body: #1f2833;
 $color__colorbackground-header:#45A29E;
 $color__colorbackground-barre: #0b0c10;
