on ajoute le widget barre de recherche de WP

--- a/sass/composants/_recherche.scss
+++ b/sass/composants/_recherche.scss
@@ -31,4 +31,24 @@
 
 
 
-.wp-recherche
+.wp-recherche {
+
+
+
+}
+
+
+.wp-block-search__button {
+
+
+    background-image: url("https://s2.svgbox.net/hero-outline.svg?ic=search");
+
+    background-image: no-repeat;
+
+    background-position: center;
+
+    margin-left: 0;
+    width: 30px;
+    height:30px;
+
+} 
