--- a/style.css
+++ b/style.css
@@ -586,6 +586,7 @@ COMPOSANTS
   align-items: flex-end;
   width: 100%;
   margin-right: 5%;
+  width: 90%;
 }
 
 @media screen and (min-width: 500px) {
@@ -727,6 +728,15 @@ COMPOSANTS
   align-items: center;
 }
 
+.wp-block-search__button {
+  background-image: url("https://s2.svgbox.net/hero-outline.svg?ic=search");
+  background-image: no-repeat;
+  background-position: center;
+  margin-left: 0;
+  width: 30px;
+  height: 30px;
+}
+
 /* ---------------------------------------------------------
 LAYOUT
 --------------------------------------------------------- */
@@ -738,6 +748,7 @@ LAYOUT
   gap: 10px;
   grid-template-columns: auto;
   grid-template-areas: "sidebar" "header " " main" "footer";
+  overflow: hidden;
 }
 
 .home::after {
