--- a/style.css
+++ b/style.css
@@ -748,7 +748,7 @@ LAYOUT
   gap: 10px;
   grid-template-columns: auto;
   grid-template-areas: "sidebar" "header " " main" "footer";
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .home::after {
