finalisation des widgets

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 /**
-Theme name: 2022-4w4 TP1 Sacha
+Theme name: 2022-4w4 TP1 Sacha - 03-17
 Author: Sacha-Alexendre Collard-Legault
 Author URI: https://github.com/drydrybanks
 Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
