dernier commit de la journée

--- a/sass/animation/_cours-carte.scss
+++ b/sass/animation/_cours-carte.scss
@@ -20,6 +20,20 @@ $nbCarte: 23;
 }
 
 
+.cours .cours-carte img {
+    transform: translateX(0);
+    transform: scale(1);
+
+    transition: transform 0.5s 0.5s ease-in-out;
+}
+
+.cours .cours-carte img:hover {
+    transform: translateX(2vw);
+    transform: scale(1.2);
+}
+
+
+
 
 
 
