s9c1-4w4 Début du lab 6

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,10 @@
 /**
-Theme name: 2022-4w4 TP1 Sacha - 03-17
+Theme name: 2022-4w4 Lab-5 Sach
 Author: Sacha-Alexendre Collard-Legault
 Author URI: https://github.com/drydrybanks
 Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
 des étapes de développement se retrouvera sur gitHub à l'adresse: https://github.com/eddytuto/2022-4w4
-Version: 1.0.0
+Version: 1.0.1
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: cidw-4w4
