s9c1 styl pour menu categorie

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,6 +36,7 @@ COMPOSANTS
 @import "composants/footer";
 @import "composants/header";
 @import "composants/navigation";
+@import "composants/navigation_categorie_cours";
 @import "composants/404";
 @import "composants/recherche";
 
