--- a/style.css
+++ b/style.css
@@ -704,6 +704,19 @@ COMPOSANTS
   align-items: center;
 }
 
+.menu-categorie_cours-container .menu {
+  display: flex;
+  list-style-type: none;
+}
+
+.menu-categorie_cours-container .menu .menu-item {
+  margin: 0 15px;
+}
+
+.menu-categorie_cours-container .menu .menu-item a {
+  padding: 5px;
+}
+
 .erreur__404 h1 {
   font-size: 5rem;
   font-family: Arial, Helvetica, sans-serif;
