style menu categorie

--- a/sass/composants/_navigation_categorie_cours.scss
+++ b/sass/composants/_navigation_categorie_cours.scss
@@ -19,5 +19,11 @@
 
 
         }
+
+        &:hover {
+            a{
+                color: $color__colorbackground-footer;
+            }
+        }
     }
 }
