--- a/style.css
+++ b/style.css
@@ -717,6 +717,10 @@ COMPOSANTS
   padding: 5px;
 }
 
+.menu-categorie_cours-container .menu:hover a {
+  color: #66fcf1;
+}
+
 .erreur__404 h1 {
   font-size: 5rem;
   font-family: Arial, Helvetica, sans-serif;
