--- a/sass/variables/_couleurs.scss
+++ b/sass/variables/_couleurs.scss
@@ -25,3 +25,13 @@ $background__link-hover: black;
 $color__link__header: rgb(223, 24, 24);
 $color__link__header-visited:rgb(221, 221, 14);
 $color__link__header-hover:green;
+
+
+
+
+// ==================================    BOUTONS MENU CATÉGORIE    ==========================================//
+$color__bouton__color : teal;
+$color__bouton__color--hover : lightblue;
+$color__bouton__background : gray;
+
+
