ajout de typos pour les titres

--- a/sass/elements/_balise.scss
+++ b/sass/elements/_balise.scss
@@ -9,3 +9,17 @@ h4{font-size:clamp(1rem, 4vw, 3rem);}
 h5{font-size:clamp(0.8rem, 4vw, 2.5rem);}
 
 h6{font-size:clamp(0.7rem, 4vw, 2rem);}
+
+
+
+
+
+h1,h2 {font-family: 'Montserrat Alternates', sans-serif;}
+
+
+
+h3,h4 {font-family: 'Montserrat Alternates', sans-serif;}
+
+
+
+h5,h6 {}
