--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,6 +27,7 @@ INITIALISATION
 ELEMENTS
 --------------------------------------------------------- */
 @import "elements/links";
+@import "elements/balise";
 
 /* ---------------------------------------------------------
 COMPOSANTS
