s9c1 variables de couleur primaire/secondaire/ternaire

--- a/sass/variables/_couleurs.scss
+++ b/sass/variables/_couleurs.scss
@@ -35,3 +35,9 @@ $color__bouton__color--hover : lightblue;
 $color__bouton__background : gray;
 
 
+
+// =================================    COULEURS TITRE      =========================================== //
+$color__titre__principal : darkblue;
+$color__titre__secondaire : rgb(23, 255, 108);
+$color__titre__ternaire : rgb(108, 45, 202);
+
