--- a/sass/elements/_balise.scss
+++ b/sass/elements/_balise.scss
@@ -22,4 +22,4 @@ h3,h4 {font-family: 'Montserrat Alternates', sans-serif;}
 
 
 
-h5,h6 {}
+h5,h6 {font-family: 'Montserrat Alternates', sans-serif;}
