ajout fichier contenu.scss

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 /**
-Theme name: 2022-4w4 Lab-5 Sach
+Theme name: 2022-4w4 Lab-5 Sacha - 03-29
 Author: Sacha-Alexendre Collard-Legault
 Author URI: https://github.com/drydrybanks
 Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
@@ -40,6 +40,7 @@ COMPOSANTS
 @import "composants/navigation_categorie_cours";
 @import "composants/404";
 @import "composants/recherche";
+@import "composants/contenu";
 
 /* ---------------------------------------------------------
 LAYOUT
