--- a/sass/composants/_navigation_categorie_cours.scss
+++ b/sass/composants/_navigation_categorie_cours.scss
@@ -12,7 +12,7 @@
             margin:0 15px;
 
             a{
-                color: $color__bouton_color ;
+             //   color: $color__bouton_color ;
                 padding: 5px;
             }
 
@@ -23,7 +23,7 @@
 
         &:hover {
             a{
-                color: $color__bouton__color--hover;  
+               
             }
         }
     }
