--- a/style.css
+++ b/style.css
@@ -481,6 +481,8 @@ COMPOSANTS
 }
 
 .cours__carte {
+  background-repeat: no-repeat;
+  background-position: 93% 3%;
   display: flex;
   flex-direction: column;
   margin: 10px;
@@ -530,6 +532,10 @@ COMPOSANTS
 
 .article__contenu {
   display: flex;
+}
+
+.web {
+  background-image: url("https://s2.svgbox.net/hero-outline.svg?ic=globe");
 }
 
 .site__footer__menu__ul {
