s9c2 dernier commit de la journée, description des catégories dans le menu

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,6 +38,7 @@ COMPOSANTS
 @import "composants/header";
 @import "composants/navigation";
 @import "composants/navigation_categorie_cours";
+@import "composants/navigation_accueil";
 @import "composants/404";
 @import "composants/recherche";
 @import "composants/contenu";
