--- a/sass/composants/_navigation_categorie_cours.scss
+++ b/sass/composants/_navigation_categorie_cours.scss
@@ -5,15 +5,27 @@
 
     .menu{      // ul
         display:flex;
+        
         list-style-type: none;
 
 
         .menu-item {        // li
-            margin:0 15px;
+            margin:0 15px 0 15px;
+
+            display:flex;
+            flex-flow: column nowrap;
 
             a{
              //   color: $color__bouton_color ;
                 padding: 5px;
+                display: flex;
+                flex-flow: column nowrap;
+
+                border: 1px white solid;
+                border-radius: 10%;
+
+                background-color: teal;
+
             }
 
 
@@ -27,4 +39,11 @@
             }
         }
     }
+}
+
+
+menu.menu-categorie_cours > ul > li {
+    display: flex;
+
+    flex-direction: column;
 }
