--- a/sass/composants/_navigation_accueil.scss
+++ b/sass/composants/_navigation_accueil.scss
@@ -14,7 +14,7 @@
 
                   // INSERT COLOR HERE
 
-                font-size: 2rem;
+                font-size: clamp(1rem, 2vw, 2rem);
                 text-decoration: none;
 
                 .menu-item-description {
