--- a/style.css
+++ b/style.css
@@ -777,7 +777,7 @@ menu.menu-categorie_cours > ul > li {
 }
 
 .menu-menu_accueil-container .menu .menu-item a {
-  font-size: 2rem;
+  font-size: clamp(1rem, 2vw, 2rem);
   text-decoration: none;
 }
 
