--- a/sass/composants/_navigation_accueil.scss
+++ b/sass/composants/_navigation_accueil.scss
@@ -17,6 +17,8 @@
                 font-size: clamp(1rem, 2vw, 2rem);
                 text-decoration: none;
 
+                width:100%;
+
                 .menu-item-description {
                     font-size: 1rem;
                 }
