--- a/style.css
+++ b/style.css
@@ -779,6 +779,7 @@ menu.menu-categorie_cours > ul > li {
 .menu-menu_accueil-container .menu .menu-item a {
   font-size: clamp(1rem, 2vw, 2rem);
   text-decoration: none;
+  width: 100%;
 }
 
 .menu-menu_accueil-container .menu .menu-item a .menu-item-description {
