--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 /**
-Theme name: 2022-4w4 Lab-5 Sacha - 03-29
+Theme name: 2022-4w4 Ex3 - Sacha - 04-14
 Author: Sacha-Alexendre Collard-Legault
 Author URI: https://github.com/drydrybanks
 Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
