--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /**
-Theme name: 2022-4w4 Lab-5 Sacha - 03-29
+Theme name: 2022-4w4 Ex3 - Sacha - 04-14
 Author: Sacha-Alexendre Collard-Legault
 Author URI: https://github.com/drydrybanks
 Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
@@ -742,6 +742,14 @@ COMPOSANTS
   align-items: center;
 }
 
+#menu-evenement {
+  display: flex;
+}
+
+.menu-evenement-container {
+  display: flex;
+}
+
 .menu-categorie_cours-container .menu {
   display: flex;
   list-style-type: none;
@@ -767,23 +775,60 @@ menu.menu-categorie_cours > ul > li {
   flex-direction: column;
 }
 
-.menu-menu_accueil-container .menu {
+.menu-accueil-container .menu,
+.menu-evenement-container .menu {
   display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.menu-menu_accueil-container .menu .menu-item {
-  background-color: pink;
-  margin: 0 15px 0 15px;
+.menu-accueil-container .menu .accueil__cours .menu-item-icone,
+.menu-evenement-container .menu .accueil__cours .menu-item-icone {
+  background-image: url("https://s2.svgbox.net/octicons.svg?ic=file-badge-bold");
 }
 
-.menu-menu_accueil-container .menu .menu-item a {
-  font-size: clamp(1rem, 2vw, 2rem);
-  text-decoration: none;
-  width: 100%;
+.menu-accueil-container .menu .menu-item,
+.menu-evenement-container .menu .menu-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #66fcf1;
+  flex: 0 0 15%;
+  height: 200px;
+  border-radius: 0%;
+  transition: border-radius 0.5s;
 }
 
-.menu-menu_accueil-container .menu .menu-item a .menu-item-description {
-  font-size: 1rem;
+.menu-accueil-container .menu .menu-item:hover,
+.menu-evenement-container .menu .menu-item:hover {
+  border-radius: 5%;
+}
+
+.menu-accueil-container .menu .menu-item a,
+.menu-evenement-container .menu .menu-item a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: clamp(1rem, 2vw, 2.2rem);
+  color: teal;
+  height: 100%;
+}
+
+.menu-accueil-container .menu .menu-item a .menu-item-description,
+.menu-evenement-container .menu .menu-item a .menu-item-description {
+  font-size: clamp(0.8rem, 1.5vw, 1rem);
+}
+
+.menu-accueil-container .menu .menu-item a .menu-item-icone,
+.menu-evenement-container .menu .menu-item a .menu-item-icone {
+  border: 1px solid #aaa;
+  width: 2rem;
+  height: 2rem;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  margin-top: auto;
 }
 
 .erreur__404 h1 {
