initialisation du git commit

--- a/sass/composants/_contenu.scss
+++ b/sass/composants/_contenu.scss
@@ -27,3 +27,9 @@
     background-position: 93% 3%;
     background-size: 30px;
 }
+
+.hide {
+    // Tous les éléments à cacher
+
+    display: none;
+}
