--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 /**
-Theme name: 2022-4w4 Ex3 - Sacha - 04-14
+Theme name: 2022-4w4 Lab-6 - Sacha
 Author: Sacha-Alexendre Collard-Legault
 Author URI: https://github.com/drydrybanks
 Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
 des étapes de développement se retrouvera sur gitHub à l'adresse: https://github.com/eddytuto/2022-4w4
-Version: 1.0.1
+Version: 1.0.2
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: cidw-4w4
@@ -888,6 +888,30 @@ menu.menu-categorie_cours > ul > li {
   background-repeat: no-repeat;
   background-position: 93% 3%;
   background-size: 30px;
+}
+
+.hide {
+  display: none;
+}
+
+.boite__modale {
+  position: fixed;
+  border: 5px black solid;
+  background-color: #aaa;
+  width: 50%;
+  height: 50%;
+  transform: scale(0);
+  transition: all 1s ease-in-out;
+  top: 25%;
+  left: 25%;
+}
+
+.boite__modale__ouvrir {
+  transform: scale(1);
+}
+
+.boite__modale__ferme {
+  color: red;
 }
 
 /* ---------------------------------------------------------
