s12c1 exercice 4 ajustements avant remise

--- a/sass/composants/_navigation_accueil.scss
+++ b/sass/composants/_navigation_accueil.scss
@@ -6,6 +6,19 @@
         display : flex;
         justify-content: space-around;
         align-items: center;
+
+
+        &-departement {
+
+
+
+            display : flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+
+
         .accueil__cours .menu-item-icone{//li
             background-image: url('https://s2.svgbox.net/octicons.svg?ic=file-badge-bold');
         }
