s13c1 - Debut du menu burger

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 /**
-Theme name: 2022-4w4 Exercice 4 - Sacha Alex Collard Legault
+Theme name: 2022-4w4 TP2-0429 - Sacha Alex Collard Legault
 Author: Sacha-Alexendre Collard-Legault
 Author URI: https://github.com/drydrybanks
 Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
