--- a/sass/animation/_burger.scss
+++ b/sass/animation/_burger.scss
@@ -13,6 +13,35 @@
         height:100%;
 
         background-color: white;
+
+
+        &:nth-of-type(1){
+            clip-path:polygon(0% 0%, 100% 0%, 100% 20%, 0% 20% );
+
+           
+        }
+
+        &:nth-of-type(2){
+            clip-path:polygon(0% 40%, 100% 40%, 100% 60%, 0% 60%);
+
+           
+        }
+
+        &:nth-of-type(3){
+            clip-path:polygon(0% 80%, 100% 80%, 100% 100%, 0% 100%);
+
+           
+        }
     }
+
+    &:hover{
+        .burger__ligne:nth-of-type(1) {
+            
+        }
+    }
+
+     // 0,0 - 100,0 - 20,0 - 100,20
+            // 0,40 - 0,60 - 100,40 - 100,60
+            // 
 
 }
