--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /**
-Theme name: 2022-4w4 Exercice 4 - Sacha Alex Collard Legault
+Theme name: 2022-4w4 TP2-0429 - Sacha Alex Collard Legault
 Author: Sacha-Alexendre Collard-Legault
 Author URI: https://github.com/drydrybanks
 Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
@@ -1339,5 +1339,17 @@ ANIMATION
   width: 100%;
   height: 100%;
   background-color: white;
+}
+
+.burger .burger__ligne:nth-of-type(1) {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 20%, 0% 20%);
+}
+
+.burger .burger__ligne:nth-of-type(2) {
+  clip-path: polygon(0% 40%, 100% 40%, 100% 60%, 0% 60%);
+}
+
+.burger .burger__ligne:nth-of-type(3) {
+  clip-path: polygon(0% 80%, 100% 80%, 100% 100%, 0% 100%);
 }
 /*# sourceMappingURL=style.css.map */
