--- a/sass/animation/_burger.scss
+++ b/sass/animation/_burger.scss
@@ -14,6 +14,8 @@
 
         background-color: white;
 
+        transition: all 1s ease-in-out;
+
 
         &:nth-of-type(1){
             clip-path:polygon(0% 0%, 100% 0%, 100% 20%, 0% 20% );
@@ -36,7 +38,24 @@
 
     &:hover{
         .burger__ligne:nth-of-type(1) {
-            
+
+            clip-path:polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
+
+        }
+
+        .burger__ligne:nth-of-type(2) {
+
+           // clip-path:polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
+           opacity: 0;
+
+        }
+
+        .burger__ligne:nth-of-type(3) {
+
+           // clip-path:polygon(-7.1% 87.1%, 92.9% 87.1%, 92.9% 107.1%, -7.1% 107.1%);
+            clip-path:polygon(-7.1% 92.9%, 92.9% -7.1%,107.1% 7.1%, 7.1% 107.1%);
+          //  clip-path:polygon(0% 80%, 100% 80%, 100% 100%, 0% 100%);
+
         }
     }
 
