--- a/style.css
+++ b/style.css
@@ -1339,6 +1339,7 @@ ANIMATION
   width: 100%;
   height: 100%;
   background-color: white;
+  transition: all 1s ease-in-out;
 }
 
 .burger .burger__ligne:nth-of-type(1) {
@@ -1351,5 +1352,17 @@ ANIMATION
 
 .burger .burger__ligne:nth-of-type(3) {
   clip-path: polygon(0% 80%, 100% 80%, 100% 100%, 0% 100%);
+}
+
+.burger:hover .burger__ligne:nth-of-type(1) {
+  clip-path: polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
+}
+
+.burger:hover .burger__ligne:nth-of-type(2) {
+  opacity: 0;
+}
+
+.burger:hover .burger__ligne:nth-of-type(3) {
+  clip-path: polygon(-7.1% 92.9%, 92.9% -7.1%, 107.1% 7.1%, 7.1% 107.1%);
 }
 /*# sourceMappingURL=style.css.map */
