s13c1 - fin du cours?

--- a/sass/composants/_navigation.scss
+++ b/sass/composants/_navigation.scss
@@ -19,14 +19,18 @@
 
 #chk-burger:checked ~ .menu-principal-container {
 
-    display:block;
+   display:block;
+
+  //  transform:translateX(0);
 }
 
 .menu-principal-container {
 
     padding: 20px 0 0 0;
+
+   // transform:translateX(-100%);
   
-    display:none;
+   display:none;
 
    
 
