--- a/sass/animation/_burger.scss
+++ b/sass/animation/_burger.scss
@@ -1,10 +1,16 @@
 .burger {
 
+
+    margin :10px;
     // Taille du bouton
-    width:10rem;
-    height:10rem;
+    width:3rem;
+    height:3rem;
+
+    border-radius:25%;
 
     background-color: black;
+
+    overflow:hidden;
 
     .burger__ligne {
         position:absolute;
@@ -14,7 +20,7 @@
 
         background-color: white;
 
-        transition: all 1s ease-in-out;
+        transition: all 0.35s ease-in-out;
 
 
         &:nth-of-type(1){
@@ -37,30 +43,33 @@
     }
 
     &:hover{
-        .burger__ligne:nth-of-type(1) {
+        
+    }
+ 
+}
 
-            clip-path:polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
+#chk-burger:checked ~ #burger {
 
-        }
+    // transform: rotate(90deg);
 
-        .burger__ligne:nth-of-type(2) {
+    .burger__ligne:nth-of-type(1) {
 
-           // clip-path:polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
-           opacity: 0;
+        clip-path:polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
 
-        }
-
-        .burger__ligne:nth-of-type(3) {
-
-           // clip-path:polygon(-7.1% 87.1%, 92.9% 87.1%, 92.9% 107.1%, -7.1% 107.1%);
-            clip-path:polygon(-7.1% 92.9%, 92.9% -7.1%,107.1% 7.1%, 7.1% 107.1%);
-          //  clip-path:polygon(0% 80%, 100% 80%, 100% 100%, 0% 100%);
-
-        }
     }
 
-     // 0,0 - 100,0 - 20,0 - 100,20
-            // 0,40 - 0,60 - 100,40 - 100,60
-            // 
+    .burger__ligne:nth-of-type(2) {
 
-}
+       // clip-path:polygon(7.1% -7.1%, 107.1% 92.9%, 92.9% 107.1%, -7.1% 7.1%);
+      // opacity: 0;
+
+       clip-path:polygon(40% 40%, 60% 40%, 60% 60%, 40% 60%);          
+
+    }
+
+    .burger__ligne:nth-of-type(3) {
+      
+        clip-path:polygon(-7.1% 92.9%, 92.9% -7.1%,107.1% 7.1%, 7.1% 107.1%);        
+    }
+ 
+ }
