s14c1 commit boite modale img fonctionnel

--- a/sass/composants/_navigation.scss
+++ b/sass/composants/_navigation.scss
@@ -22,6 +22,8 @@
    display:block;
 
   //  transform:translateX(0);
+
+   // opacity:1;
 }
 
 .menu-principal-container {
@@ -30,7 +32,11 @@
 
    // transform:translateX(-100%);
   
-   display:none;
+  display:none;
+
+  // display:block;
+
+  // opacity:0;
 
    
 
