s14c1 galerie et caroussel semi fonctionnel

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,6 +43,7 @@ COMPOSANTS
 @import "composants/recherche";
 @import "composants/contenu";
 @import "composants/boite-modale";
+@import "composants/galerie";
 
 /* ---------------------------------------------------------
 LAYOUT
