--- a/sass/composants/_boite-modale.scss
+++ b/sass/composants/_boite-modale.scss
@@ -1,4 +1,4 @@
-.boite__modale {
+.boite__modale, .boite__carroussel {
 
     position:fixed;
 
@@ -22,6 +22,10 @@
         transform: scale(1);
    }
 
+   img {
+       object-fit: cover;
+   }
+
    
 
     &__ferme{
@@ -33,4 +37,12 @@
     }
 
     &__texte{}
+}
+
+.boite__carroussel {
+
+}
+
+.boite__modale {
+    
 }
