--- a/sass/composants/_boite-modale.scss
+++ b/sass/composants/_boite-modale.scss
@@ -41,8 +41,17 @@
 
 .boite__carroussel {
 
+    width:75%;
+    height:75%;
+    top:12.5%;
+    left:12.5%;
 }
 
 .boite__modale {
-    
+
+    width:50%;
+    height:50%;
+    top:25%;
+    left:25%;
+
 }
