--- a/sass/composants/_boite-modale.scss
+++ b/sass/composants/_boite-modale.scss
@@ -22,6 +22,12 @@
         transform: scale(1);
    }
 
+   &__ferme{
+        position:absolute;
+        width:30px;
+        height:30px;
+   }
+
  
 
    
