boite carroussel fonctionnel et image ajusté, bouton ferme fonctionnel, reste navigation

--- a/sass/composants/_galerie.scss
+++ b/sass/composants/_galerie.scss
@@ -12,5 +12,8 @@
    @media screen and (min-width : $largeur__media-tablette) {
        width:75%;
        object-fit: scale-down;
+
+       flex-flow:row;
+       
    }
 }
