--- a/sass/composants/_boite-modale.scss
+++ b/sass/composants/_boite-modale.scss
@@ -23,9 +23,18 @@
    }
 
    &__ferme{
+
+
+
         position:absolute;
+
         width:30px;
         height:30px;
+
+        top:10px;
+        right:10px;
+
+        z-index:1;
    }
 
  
@@ -51,7 +60,13 @@
     left:12.5%;
 
     img {
+
+        position: absolute;
         object-fit: cover;
+        width: 100%;
+        height: 100%;
+        top:0;
+        left:0;
     }
 
     &__navigation {
@@ -63,6 +78,10 @@
         justify-content: center;
         width:100%;
 
+
+        border: 1px solid red;
+
+        
     }
 }
 
