--- a/style.css
+++ b/style.css
@@ -896,7 +896,7 @@ menu.menu-categorie_cours > ul > li {
   display: none;
 }
 
-.boite__modale {
+.boite__modale, .boite__carroussel {
   position: fixed;
   border: 5px black solid;
   background-color: #aaa;
@@ -908,12 +908,53 @@ menu.menu-categorie_cours > ul > li {
   left: 25%;
 }
 
-.boite__modale__ouvrir {
+.boite__modale__ouvrir, .boite__carroussel__ouvrir {
   transform: scale(1);
 }
 
-.boite__modale__ferme {
+.boite__modale__ferme, .boite__carroussel__ferme {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 10px;
+  right: 10px;
+  z-index: 1;
+}
+
+.boite__modale__ferme, .boite__carroussel__ferme {
   color: red;
+}
+
+.boite__carroussel {
+  width: 75%;
+  height: 75%;
+  top: 12.5%;
+  left: 12.5%;
+}
+
+.boite__carroussel img {
+  position: absolute;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.boite__carroussel__navigation {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  border: 1px solid red;
+}
+
+.boite__modale {
+  width: 50%;
+  height: 50%;
+  top: 25%;
+  left: 25%;
 }
 
 .galerie {
@@ -925,6 +966,7 @@ menu.menu-categorie_cours > ul > li {
   .galerie {
     width: 75%;
     object-fit: scale-down;
+    flex-flow: row;
   }
 }
 
