--- a/sass/composants/_boite-modale.scss
+++ b/sass/composants/_boite-modale.scss
@@ -81,6 +81,21 @@
 
         border: 1px solid red;
 
+        z-index:1;
+
+        button {
+            width:20px;
+            height:20px;
+            border-radius:100%;
+
+            margin: 10px;
+            padding: 10px;
+
+            &:focus {
+                background-color: black;
+            }
+        }
+
         
     }
 }
