--- a/sass/composants/_boite-modale.scss
+++ b/sass/composants/_boite-modale.scss
@@ -54,12 +54,24 @@
 
 .boite__carroussel {
 
+    width:95%;
+    height:95%;
+    top:2.5%;
+    left:2.5%;
+
+    overflow: hidden;
+
+
+    @media screen and(min-width:$largeur__media-tablette) {
+
     width:75%;
     height:75%;
     top:12.5%;
     left:12.5%;
+}
 
-    img {
+
+    &__img {
 
         position: absolute;
         object-fit: cover;
@@ -67,6 +79,27 @@
         height: 100%;
         top:0;
         left:0;
+
+        img{
+
+            position: absolute;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            top:0;
+            left:0;
+            opacity :0;
+            transform:translateX(-100%);
+            transition: all 1s ease-in-out;
+
+            &.img--ouvrir{
+                opacity:1;
+                transform:translateX(0);
+            }
+           
+
+        }
+        
     }
 
     &__navigation {
@@ -83,7 +116,7 @@
 
         z-index:1;
 
-        button {
+       .bouton  {
             width:40px;
             height:20px;
             border-radius:100%;
