--- a/sass/composants/_navigation_accueil.scss
+++ b/sass/composants/_navigation_accueil.scss
@@ -37,7 +37,7 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            background-color: $color__colorbackground-footer;
+            //background-color: $color__colorbackground-footer;
             //width: 20%;
             flex : 0 0 15%;
             height : 200px;
@@ -46,7 +46,7 @@
             transition: border-radius 0.5s;
 
             &:hover{
-                border-radius: 5%;
+                border-radius: 25%;
             }
 
             
@@ -56,7 +56,7 @@
                 flex-direction: column;
                 align-items: center;
                 font-size: clamp(1rem, 2vw, 2.2rem);
-                color: $color__bouton__color;
+                color:white;
                 height : 100%;
 
                 
