--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -69,7 +69,16 @@
     }
 }
 
+html {
+    width:100vw;
+    height:100vh;
+    overflow-x:hidden;
 
+}
+
+figure {
+    flex-flow: column nowrap;
+}
 
 
 .site__main{
@@ -170,4 +179,35 @@ flex-flow: column nowrap;
 justify-content: space-between;
 align-items: center;
 
+}
+
+.menu-item {
+    display:flex;
+    flex-flow:column nowrap;
+
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+
+    border: 2px solid white;
+    background-color:rgba($color__colorbackground-footer, 0.5);
+}
+
+.galerie {
+    display: flex;
+    flex-flow:row nowrap;
+
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
+.block-gallery-grid {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+
+    align-self: center;
 }
