--- a/style.css
+++ b/style.css
@@ -707,13 +707,14 @@ COMPOSANTS
 }
 
 .menu-item a {
-  transition: background-color .3s;
+  transition: all .3s;
   display: block;
   padding: 3px;
   text-decoration: none;
 }
 
 .menu-item a:hover {
+  border-radius: 25%;
   background-color: #66fcf1;
 }
 
@@ -791,7 +792,6 @@ menu.menu-categorie_cours > ul > li {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  background-color: #66fcf1;
   flex: 0 0 15%;
   height: 200px;
   border-radius: 0%;
@@ -801,7 +801,7 @@ menu.menu-categorie_cours > ul > li {
 .menu-accueil-container .menu .menu-item:hover,
 .menu-evenement-container .menu .menu-item:hover,
 .menu-departement-container .menu .menu-item:hover {
-  border-radius: 5%;
+  border-radius: 25%;
 }
 
 .menu-accueil-container .menu .menu-item a,
@@ -811,7 +811,7 @@ menu.menu-categorie_cours > ul > li {
   flex-direction: column;
   align-items: center;
   font-size: clamp(1rem, 2vw, 2.2rem);
-  color: teal;
+  color: white;
   height: 100%;
 }
 
@@ -1059,6 +1059,16 @@ LAYOUT
   justify-content: stretch;
 }
 
+html {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+}
+
+figure {
+  flex-flow: column nowrap;
+}
+
 .site__main {
   grid-area: main;
   background-color: rgba(31, 40, 51, 0.5);
@@ -1118,6 +1128,32 @@ LAYOUT
   flex-flow: column nowrap;
   justify-content: space-between;
   align-items: center;
+}
+
+.menu-item {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: 2px solid white;
+  background-color: rgba(102, 252, 241, 0.5);
+}
+
+.galerie {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.block-gallery-grid {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  align-self: center;
 }
 
 /* ---------------------------------------------------------
