EF-SACL installation et configuration de Live Sass t Intelephense

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 /**
-Theme name: 2022-4w4 TP2-05-12 - Sacha Alex Collard Legault
+Theme name: 2022-4w4 Épreuve Finale - 05-19 - Sacha Alex Collard Legault
 Author: Sacha-Alexendre Collard-Legault
 Author URI: https://github.com/drydrybanks
 Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
@@ -44,6 +44,7 @@ COMPOSANTS
 @import "composants/contenu";
 @import "composants/boite-modale";
 @import "composants/galerie";
+@import "composants/atelier";
 
 /* ---------------------------------------------------------
 LAYOUT
