--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /**
-Theme name: 2022-4w4 TP2-05-12 - Sacha Alex Collard Legault
+Theme name: 2022-4w4 Épreuve Finale - 05-19 - Sacha Alex Collard Legault
 Author: Sacha-Alexendre Collard-Legault
 Author URI: https://github.com/drydrybanks
 Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
@@ -1008,6 +1008,16 @@ menu.menu-categorie_cours > ul > li {
     object-fit: scale-down;
     flex-flow: row;
   }
+}
+
+.conteneur__atelier {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-around;
+  align-items: center;
 }
 
 /* ---------------------------------------------------------
