EF-SACL début de la stylisation du menu et des pages ATeliers

--- a/sass/composants/_navigation_accueil.scss
+++ b/sass/composants/_navigation_accueil.scss
@@ -1,6 +1,7 @@
 .menu-accueil-container,
 .menu-evenement-container,
-.menu-departement-container { // nav
+.menu-departement-container,
+.menu-atelier-container { // nav
 
     .menu { // ul
 
