--- a/sass/composants/_atelier.scss
+++ b/sass/composants/_atelier.scss
@@ -11,3 +11,14 @@
     justify-content: space-around;
     align-items: center;
 }
+
+
+.html__css {
+    
+}
+
+// .menu-atelier-container {
+//     display: flex;
+
+//     flex-flow: row nowrap;
+// }
