--- a/style.css
+++ b/style.css
@@ -773,7 +773,8 @@ menu.menu-categorie_cours > ul > li {
 
 .menu-accueil-container .menu,
 .menu-evenement-container .menu,
-.menu-departement-container .menu {
+.menu-departement-container .menu,
+.menu-atelier-container .menu {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -781,13 +782,15 @@ menu.menu-categorie_cours > ul > li {
 
 .menu-accueil-container .menu .accueil__cours .menu-item-icone,
 .menu-evenement-container .menu .accueil__cours .menu-item-icone,
-.menu-departement-container .menu .accueil__cours .menu-item-icone {
+.menu-departement-container .menu .accueil__cours .menu-item-icone,
+.menu-atelier-container .menu .accueil__cours .menu-item-icone {
   background-image: url("https://s2.svgbox.net/octicons.svg?ic=file-badge-bold");
 }
 
 .menu-accueil-container .menu .menu-item,
 .menu-evenement-container .menu .menu-item,
-.menu-departement-container .menu .menu-item {
+.menu-departement-container .menu .menu-item,
+.menu-atelier-container .menu .menu-item {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -800,13 +803,15 @@ menu.menu-categorie_cours > ul > li {
 
 .menu-accueil-container .menu .menu-item:hover,
 .menu-evenement-container .menu .menu-item:hover,
-.menu-departement-container .menu .menu-item:hover {
+.menu-departement-container .menu .menu-item:hover,
+.menu-atelier-container .menu .menu-item:hover {
   border-radius: 25%;
 }
 
 .menu-accueil-container .menu .menu-item a,
 .menu-evenement-container .menu .menu-item a,
-.menu-departement-container .menu .menu-item a {
+.menu-departement-container .menu .menu-item a,
+.menu-atelier-container .menu .menu-item a {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -817,13 +822,15 @@ menu.menu-categorie_cours > ul > li {
 
 .menu-accueil-container .menu .menu-item a .menu-item-description,
 .menu-evenement-container .menu .menu-item a .menu-item-description,
-.menu-departement-container .menu .menu-item a .menu-item-description {
+.menu-departement-container .menu .menu-item a .menu-item-description,
+.menu-atelier-container .menu .menu-item a .menu-item-description {
   font-size: clamp(0.8rem, 1.5vw, 1rem);
 }
 
 .menu-accueil-container .menu .menu-item a .menu-item-icone,
 .menu-evenement-container .menu .menu-item a .menu-item-icone,
-.menu-departement-container .menu .menu-item a .menu-item-icone {
+.menu-departement-container .menu .menu-item a .menu-item-icone,
+.menu-atelier-container .menu .menu-item a .menu-item-icone {
   border: 1px solid #aaa;
   width: 2rem;
   height: 2rem;
