EF-SACL ajout des descriptions et des icones dans le menu atelier

--- a/sass/composants/_atelier.scss
+++ b/sass/composants/_atelier.scss
@@ -14,8 +14,22 @@
 
 
 .html__css {
-    
+    background-image: url('https://s2.svgbox.net/files.svg?ic=html');
 }
+
+.intro__git {
+    background-image: url('https://s2.svgbox.net/files.svg?ic=git');
+}
+
+.intro__react {
+    background-image: url('https://s2.svgbox.net/files.svg?ic=reactjs');
+}
+
+.css__avance {
+    background-image: url('https://s2.svgbox.net/files.svg?ic=css');
+}
+
+
 
 // .menu-atelier-container {
 //     display: flex;
