--- a/style.css
+++ b/style.css
@@ -1027,6 +1027,22 @@ menu.menu-categorie_cours > ul > li {
   align-items: center;
 }
 
+.html__css {
+  background-image: url("https://s2.svgbox.net/files.svg?ic=html");
+}
+
+.intro__git {
+  background-image: url("https://s2.svgbox.net/files.svg?ic=git");
+}
+
+.intro__react {
+  background-image: url("https://s2.svgbox.net/files.svg?ic=reactjs");
+}
+
+.css__avance {
+  background-image: url("https://s2.svgbox.net/files.svg?ic=css");
+}
+
 /* ---------------------------------------------------------
 LAYOUT
 --------------------------------------------------------- */
