--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 /**
-Theme name: 2022-4w4 Épreuve Finale - 05-19 - Sacha Alex Collard Legault
+Theme name: 2022-4w4 - Remise - Épreuve Finale - 05-19 - Sacha Alex Collard Legault
 Author: Sacha-Alexendre Collard-Legault
-Author URI: https://github.com/drydrybanks
+Author URI: https://github.com/drydrybanks/CIDW-4W4/tree/epreuve-finale
 Dwscription : Ce thème sert de base de développement pour l'ensemble du cours 4W4. Chacune 
 des étapes de développement se retrouvera sur gitHub à l'adresse: https://github.com/eddytuto/2022-4w4
 Version: 1.0.2
